# xTetris

./: .clang-format  .gitignore  .~lock.Relazione.odt#  CMakeLists.txt  Doxyfile  README.md  Relazione.odt  game  game.c  library.h  pieces.h  players.h  temp.c
HeaderFiles/: cpu.h  library.h  pieces.h  players.h
doc/html/: annotated.html  annotated_dup.js  classes.html  cpu_8c.html  cpu_8h.html  cpu_8h.js  cpu_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  files.html  functions.html  functions_vars.html  game_8c.html  globals.html  globals_func.html  globals_type.html  index.html  macro_8h.html  macro_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  pieces_8h.html  pieces_8h.js  pieces_8h_source.html  players_8h.html  players_8h.js  players_8h_source.html  structboard.html  structcpuDecision.html  structcpu_decision.html  structplayer.html  structtetramino.html
doc/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  (+68 more)
doc/latex/: annotated.tex  cpu_8c.tex  cpu_8h.tex  cpu_8h_source.tex  files.tex  game_8c.tex  macro_8h.tex  macro_8h_source.tex  pieces_8h.tex  pieces_8h_source.tex  players_8h.tex  players_8h_source.tex  refman.tex  structboard.tex  structcpuDecision.tex  structcpu_decision.tex  structplayer.tex  structtetramino.tex
src/: Makefile  cpu.c  cpu.h  definePieces.h  game.c  library.c  macro.h  pieces.c  pieces.h  players.c  players.h  xTetris  xTetrisTest
